# uoh-sqak-ex02

./: .env-example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT-lecture-05.md  CONTEXT-lectures.md  CONTEXT-rubric-and-pdfs.md  IDEA-handwritten-notes-salah.md  IDEA.md  LICENSE  README.md  RULES.md  SUBMISSION_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml
assets/: git-log.txt  manual-phase1-con-turn1.txt  manual-phase1-pro-turn1.txt  manual-phase1-pro-turn2.txt  menu-run.txt  pytest-coverage.txt
config/: agents.json  debate_rules.json  logging_config.json  rate_limits.json  setup.json
config/schemas/: message-1.00.json
docs/: AUDIT.md  CLAUDE_DESIGN_PROMPT.md  PLAN.md  PRD.md  PRD_con_agent.md  PRD_gatekeeper.md  PRD_gui.md  PRD_ipc_bus.md  PRD_judge_agent.md  PRD_orchestrator.md  PRD_phase14_stage.md  PRD_pro_agent.md  PRD_skills.md  PRD_watchdog.md  PRD_web_search_tool.md  PROMPTS.md  TODO.md
docs/ADRs/: ADR-001-ipc-queue.md  ADR-002-skill-static-load.md  ADR-003-claude-cli-shellout.md  ADR-004-search-pluggable.md  ADR-005-same-provider-mitigation.md  ADR-006-cross-process-spend.md  ADR-007-judge-criteria-preflight.md
docs/diagrams/: c1-context.mmd  c2-container.mmd  class-diagram.mmd  uml-sequence-ping.mmd
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  (+6 more)
scripts/: build_judge_criteria.py  check_file_lines.py  compose_side_by_side.py  fill_submission_pdf.py  render_comparison_panel.py  render_terminal_png.py
tests/: conftest.py
transcripts/: sample-session-1.json
(+141 files in other folders)
