[project]
name = "agent-debate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Salah Qadah", email = "skadah324@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
agent-debate = "agent_debate:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
