[project]
name = "agent-debate"
version = "1.00.0"
description = "HW2: Multi-agent debate system (course 203.3763)"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Salah Qadah" },
    { name = "Andalus Kalash" },
]
license = { text = "MIT" }
dependencies = [
    "jsonschema>=4.20",
    "ddgs>=9.0",
    "pydantic>=2.5",
]

[project.scripts]
agent-debate = "agent_debate.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "e2e: requires real Claude CLI + DDG (gated by RUN_E2E=1)",
    "chaos: deliberately kills processes mid-flight",
]
timeout = 60

[tool.coverage.run]
source = ["src"]
omit = ["src/agent_debate/main.py", "*/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
